Feature/filepaths (#12)
* Working on file paths

* Initial path addition

* Show lock icon for privilege column

* Privileged icons update with validation task

---------

Co-authored-by: Jamey <jparham@snjdigitalsolutions.com>